--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -43,7 +43,7 @@ div.col-one {
   }
 }
 div.col-two {
-  p {
+  p.about-us {
     position: inherit;
     display: block;
     justify-content: center;
@@ -88,338 +88,6 @@ div.col-four {
     border-radius: 2.4rem;
     width: 12rem;
     height: 3.9rem;
-  }
-}
-
-@media (min-width: 320px) {
-  div.main-footer {
-    position: relative;
-    overflow-x: hidden;
-    margin-top: 0rem;
-  }
-  .col-one {
-    h1.footer-title {
-      font-size: 1.8rem;
-      position: absolute;
-      top: 9rem;
-      left: 2rem;
-    }
-    p.footer-subtitle {
-      font-size: 1.4rem;
-      width: 10rem;
-      position: absolute;
-      top: 12rem;
-      left: 2rem;
-    }
-    .social-icons {
-      .instagram {
-        position: absolute;
-        top: 13rem;
-        right: 9rem;
-        padding: 1.1rem;
-      }
-      .facebook {
-        position: absolute;
-        top: 13em;
-        right: 2rem;
-        padding: 1.1rem 1.8rem;
-      }
-    }
-  }
-  p.about-us {
-    display: none;
-  }
-  div.col-three {
-    align-content: flex-end;
-    font-size: 1.4rem;
-    position: absolute;
-    left: 18rem;
-    top: 9rem;
-    padding-left: 0rem;
-  }
-  div.col-four {
-    button.footer-login {
-      position: absolute;
-      top: 3rem;
-      left: 2rem;
-      padding: 0.5rem 2rem;
-      font-size: 1.6rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-    button.footer-join {
-      position: absolute;
-      margin-top: 0rem;
-      top: 3rem;
-      right: 2rem;
-      font-size: 1.6rem;
-      padding: 0.5rem 2rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-  }
-}
-@media (min-width: 375px) {
-  div.main-footer {
-    position: relative;
-    overflow-x: hidden;
-    margin-top: 0rem;
-  }
-  .col-one {
-    h1.footer-title {
-      font-size: 1.8rem;
-      position: absolute;
-      top: 9rem;
-      left: 2rem;
-    }
-    p.footer-subtitle {
-      font-size: 1.4rem;
-      width: 10rem;
-      position: absolute;
-      top: 12rem;
-      left: 2rem;
-    }
-    .social-icons {
-      .instagram {
-        position: absolute;
-        top: 13rem;
-        right: 9rem;
-        padding: 1.1rem;
-      }
-      .facebook {
-        position: absolute;
-        top: 13em;
-        right: 2rem;
-        padding: 1.1rem 1.8rem;
-      }
-    }
-  }
-  p.about-us {
-    display: none;
-  }
-  div.col-three {
-    align-content: flex-end;
-    font-size: 1.4rem;
-    position: absolute;
-    left: 23rem;
-    top: 9rem;
-  }
-  div.col-four {
-    button.footer-login {
-      position: absolute;
-      top: 3rem;
-      left: 2rem;
-      padding: 0.5rem 2rem;
-      font-size: 1.6rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-    button.footer-join {
-      position: absolute;
-      margin-top: 0rem;
-      top: 3rem;
-      right: 2rem;
-      font-size: 1.6rem;
-      padding: 0.5rem 2rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-  }
-}
-@media (min-width: 414px) {
-  div.main-footer {
-    position: relative;
-    overflow-x: hidden;
-    margin-top: 0rem;
-  }
-  .col-one {
-    h1.footer-title {
-      font-size: 1.8rem;
-      position: absolute;
-      top: 8rem;
-      left: 2rem;
-    }
-    p.footer-subtitle {
-      font-size: 1.4rem;
-      width: 10rem;
-      position: absolute;
-      top: 10rem;
-      left: 2rem;
-    }
-    .social-icons {
-      .instagram {
-        position: absolute;
-        top: 14rem;
-        right: 13.5rem;
-        padding: 1.1rem;
-      }
-      .facebook {
-        position: absolute;
-        top: 14rem;
-        right: 2rem;
-        padding: 1.1rem 1.8rem;
-      }
-    }
-  }
-  div.col-three {
-    font-size: 1.8rem;
-    right: 2rem;
-    top: 8rem;
-    display: flex;
-  }
-  div.col-four {
-    button.footer-login {
-      position: absolute;
-      top: 2rem;
-      left: 2rem;
-      padding: 0.5rem 2rem;
-      font-size: 1.6rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-    button.footer-join {
-      position: absolute;
-      margin-top: 0rem;
-      top: 2rem;
-      right: 6.5rem;
-      font-size: 1.6rem;
-      padding: 0.5rem 2rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-  }
-}
-@media (min-width: 500px) {
-  div.main-footer {
-    position: relative;
-    overflow-x: hidden;
-    margin-top: 0rem;
-  }
-  .col-one {
-    h1.footer-title {
-      font-size: 2rem;
-      position: absolute;
-      top: 8rem;
-      left: 2rem;
-    }
-    p.footer-subtitle {
-      font-size: 1.6rem;
-      width: 15rem;
-      position: absolute;
-      top: 11rem;
-      left: 2rem;
-    }
-    .social-icons {
-      .instagram {
-        position: absolute;
-        top: 13rem;
-        right: 13.5rem;
-        padding: 1.1rem;
-      }
-      .facebook {
-        position: absolute;
-        top: 13rem;
-        right: 2rem;
-        padding: 1.1rem 1.8rem;
-      }
-    }
-  }
-  div.col-three {
-    font-size: 1.8rem;
-    left: 32rem;
-    top: 8rem;
-    display: flex;
-  }
-  div.col-four {
-    button.footer-login {
-      position: absolute;
-      top: 2rem;
-      left: 2rem;
-      padding: 0.5rem 2rem;
-      font-size: 1.6rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-    button.footer-join {
-      position: absolute;
-      margin-top: 0rem;
-      top: 2rem;
-      right: 6.5rem;
-      font-size: 1.6rem;
-      padding: 0.5rem 2rem;
-      width: 12rem;
-      height: 3.9rem;
-    }
-  }
-}
-@media (min-width: 768px) {
-  div.main-footer {
-    position: relative;
-    height: 25.1rem;
-    padding: 3rem 4rem;
-    margin-top: 0rem;
-    overflow-x: hidden;
-  }
-
-  .col-one {
-    h1.footer-title {
-      position: inherit;
-      font-size: 4rem;
-    }
-    p.footer-subtitle {
-      position: inherit;
-      font-size: 1.6rem;
-      width: 22rem;
-    }
-    .social-icons {
-      .instagram {
-        position: inherit;
-        border: 0.1rem solid white;
-        border-radius: 100%;
-        padding: 1.1rem;
-        margin-top: 2rem;
-      }
-      .facebook {
-        position: inherit;
-        border: 0.1rem solid white;
-        border-radius: 100%;
-        padding: 1.1rem 1.8rem;
-        margin-left: 1.2rem;
-        margin-top: 2rem;
-      }
-    }
-  }
-  div.col-two {
-    p {
-      position: inherit;
-      display: block;
-      justify-content: center;
-      font-size: 1.8rem;
-      margin-left: 5rem;
-    }
-  }
-  div.col-three {
-    position: inherit;
-    font-size: 1.8rem;
-    color: white;
-    display: flex;
-    justify-content: center;
-  }
-  div.col-four {
-    align-content: flex-end;
-    button.footer-login {
-      font-size: 1.8rem;
-      padding: 0.5rem 2rem;
-      position: inherit;
-    }
-    button.footer-join {
-      position: inherit;
-
-      font-size: 1.8rem;
-      font-weight: 600;
-      padding: 0.5rem 2rem;
-      margin-top: 1.8rem;
-    }
   }
 }
 
@@ -469,7 +137,7 @@ div.col-four {
     }
   }
   div.col-two {
-    p {
+    p.about-us {
       position: inherit;
       display: block;
       justify-content: center;
@@ -512,6 +180,432 @@ div.col-four {
       padding: 0.5rem 2rem;
       margin-top: 1.8rem;
       border-radius: 2.4rem;
+      width: 12rem;
+      height: 3.9rem;
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1279px) {
+  div.main-footer {
+    position: relative;
+    height: 23rem;
+    padding: 3rem 4rem;
+    margin-top: 0rem;
+    overflow-x: hidden;
+  }
+
+  div.col-one {
+    h1.footer-title {
+      position: inherit;
+      font-size: 4rem;
+    }
+    p.footer-subtitle {
+      position: inherit;
+      font-size: 1.6rem;
+      width: 22rem;
+    }
+    .social-icons {
+      img.instagram {
+        position: inherit;
+        border: 0.1rem solid white;
+        border-radius: 100%;
+        padding: 1.1rem;
+        margin-top: 2rem;
+      }
+      img.facebook {
+        position: inherit;
+        border: 0.1rem solid white;
+        border-radius: 100%;
+        padding: 1.1rem 1.8rem;
+        margin-left: 1.2rem;
+        margin-top: 2rem;
+      }
+    }
+  }
+  div.col-two {
+    p.about-us {
+      position: inherit;
+      display: block;
+      justify-content: center;
+      font-size: 1.8rem;
+      margin-left: 5rem;
+    }
+  }
+  div.col-three {
+    position: inherit;
+    font-size: 1.8rem;
+    color: white;
+    display: flex;
+    justify-content: center;
+  }
+  div.col-four {
+    align-content: flex-end;
+    button.footer-login {
+      font-size: 1.8rem;
+      padding: 0.5rem 2rem;
+      position: inherit;
+    }
+    button.footer-join {
+      position: inherit;
+
+      font-size: 1.8rem;
+      font-weight: 600;
+      padding: 0.5rem 2rem;
+      margin-top: 1.8rem;
+    }
+  }
+}
+
+@media (min-width: 540px) and (max-width: 767px) {
+  div.main-footer {
+    position: relative;
+    overflow-x: hidden;
+    margin-top: 0rem;
+  }
+  div.col-one {
+    h1.footer-title {
+      font-size: 2rem;
+      position: absolute;
+      top: 8rem;
+      left: 2rem;
+    }
+    p.footer-subtitle {
+      font-size: 1.6rem;
+      width: 15rem;
+      position: absolute;
+      top: 9rem;
+      left: 2rem;
+    }
+    .social-icons {
+      img.instagram {
+        position: absolute;
+        border: 0.1rem solid white;
+        border-radius: 100%;
+        padding: 1.1rem;
+        margin-top: 2rem;
+        right: 17rem;
+      }
+      img.facebook {
+        position: absolute;
+        border: 0.1rem solid white;
+        border-radius: 100%;
+        padding: 1.1rem 1.8rem;
+        margin-left: 1.2rem;
+        margin-top: 2rem;
+        right: 6rem;
+      }
+    }
+  }
+  div.col-two {
+    p.about-us {
+      display: none;
+    }
+  }
+  div.col-three {
+    position: inherit;
+    font-size: 1.8rem;
+    color: white;
+    display: flex;
+    justify-content: right;
+  }
+  div.col-four {
+    button.footer-login {
+      font-size: 1.8rem;
+      padding: 0.5rem 2rem;
+      position: absolute;
+      left: 6rem;
+    }
+    button.footer-join {
+      position: absolute;
+      left: 32rem;
+      font-size: 1.8rem;
+      font-weight: 600;
+      padding: 0.5rem 2rem;
+      margin-top: 1.8rem;
+    }
+  }
+}
+
+@media (min-width: 500px) and (max-width: 539px) {
+  div.main-footer {
+    position: relative;
+    overflow-x: hidden;
+    margin-top: 0rem;
+  }
+  div.col-one {
+    h1.footer-title {
+      font-size: 2rem;
+      position: absolute;
+      top: 8rem;
+      left: 2rem;
+    }
+    p.footer-subtitle {
+      font-size: 1.6rem;
+      width: 15rem;
+      position: absolute;
+      top: 9rem;
+      left: 2rem;
+    }
+    .social-icons {
+      .instagram {
+        position: absolute;
+        top: 13rem;
+        right: 13.5rem;
+        padding: 1.1rem;
+      }
+      .facebook {
+        position: absolute;
+        top: 13rem;
+        right: 2rem;
+        padding: 1.1rem 1.8rem;
+      }
+    }
+  }
+  div.col-two {
+    p.about-us {
+      display: none;
+    }
+  }
+  div.col-three {
+    font-size: 1.8rem;
+    left: 32rem;
+    top: 8rem;
+    display: flex;
+    justify-content: right;
+  }
+  div.col-four {
+    button.footer-login {
+      position: absolute;
+      top: 2rem;
+      left: 2rem;
+      padding: 0.5rem 2rem;
+      font-size: 1.6rem;
+      width: 12rem;
+      height: 3.9rem;
+    }
+    button.footer-join {
+      position: absolute;
+      margin-top: 0rem;
+      top: 2rem;
+      right: 6.5rem;
+      font-size: 1.6rem;
+      padding: 0.5rem 2rem;
+      width: 12rem;
+      height: 3.9rem;
+    }
+  }
+}
+
+@media (min-width: 414px) and (max-width: 499px) {
+  div.main-footer {
+    position: relative;
+    overflow-x: hidden;
+    margin-top: 0rem;
+  }
+  div.col-one {
+    h1.footer-title {
+      font-size: 1.8rem;
+      position: absolute;
+      top: 8rem;
+      left: 2rem;
+    }
+    p.footer-subtitle {
+      font-size: 1.4rem;
+      width: 10rem;
+      position: absolute;
+      top: 10rem;
+      left: 2rem;
+    }
+    .social-icons {
+      img.instagram {
+        position: absolute;
+        top: 14rem;
+        left: 23rem;
+        padding: 1.1rem;
+      }
+      img.facebook {
+        position: absolute;
+        top: 14rem;
+        right: 2rem;
+        padding: 1.1rem 1.8rem;
+      }
+    }
+  }
+  div.col-two {
+    p.about-us {
+      display: none;
+    }
+  }
+  div.col-three {
+    font-size: 1.8rem;
+    right: 3rem;
+    top: 8rem;
+    display: flex;
+    justify-content: right;
+  }
+  div.col-four {
+    button.footer-login {
+      position: absolute;
+      top: 2rem;
+      left: 2rem;
+      padding: 0.5rem 2rem;
+      font-size: 1.6rem;
+      width: 12rem;
+      height: 3.9rem;
+    }
+    button.footer-join {
+      margin-right: 0;
+      position: absolute;
+      margin-top: 0rem;
+      top: 2rem;
+      right: 6.5rem;
+      font-size: 1.6rem;
+      padding: 0.5rem 2rem;
+      width: 12rem;
+      height: 3.9rem;
+    }
+  }
+}
+
+@media (min-width: 375px) and (max-width: 413px) {
+  div.main-footer {
+    position: relative;
+    overflow-x: hidden;
+    margin-top: 0rem;
+  }
+  div.col-one {
+    h1.footer-title {
+      font-size: 1.8rem;
+      position: absolute;
+      top: 9rem;
+      left: 2rem;
+    }
+    p.footer-subtitle {
+      font-size: 1.4rem;
+      width: 10rem;
+      position: absolute;
+      top: 12rem;
+      left: 2rem;
+    }
+    .social-icons {
+      .instagram {
+        position: absolute;
+        top: 13rem;
+        right: 9rem;
+        padding: 1.1rem;
+      }
+      .facebook {
+        position: absolute;
+        top: 13em;
+        right: 2rem;
+        padding: 1.1rem 1.8rem;
+      }
+    }
+  }
+  div.col-two {
+    p.about-us {
+      display: none;
+    }
+  }
+  div.col-three {
+    align-content: flex-end;
+    font-size: 1.4rem;
+    position: absolute;
+    left: 23rem;
+    top: 9rem;
+    display: flex;
+    justify-content: right;
+  }
+  div.col-four {
+    button.footer-login {
+      position: absolute;
+      top: 3rem;
+      left: 2rem;
+      padding: 0.5rem 2rem;
+      font-size: 1.6rem;
+      width: 12rem;
+      height: 3.9rem;
+    }
+    button.footer-join {
+      position: absolute;
+      margin-top: 0rem;
+      top: 3rem;
+      right: 2rem;
+      font-size: 1.6rem;
+      padding: 0.5rem 2rem;
+      width: 12rem;
+      height: 3.9rem;
+    }
+  }
+}
+
+@media (min-width: 320px) and (max-width: 374px) {
+  div.main-footer {
+    position: relative;
+    overflow-x: hidden;
+    margin-top: 0rem;
+  }
+  div.col-one {
+    h1.footer-title {
+      font-size: 1.8rem;
+      position: absolute;
+      top: 9rem;
+      left: 2rem;
+    }
+    p.footer-subtitle {
+      font-size: 1.4rem;
+      width: 10rem;
+      position: absolute;
+      top: 10rem;
+      left: 2rem;
+    }
+    .social-icons {
+      img.instagram {
+        position: absolute;
+        top: 13rem;
+        right: 9rem;
+        padding: 1.1rem;
+      }
+      img.facebook {
+        position: absolute;
+        top: 13em;
+        right: 2rem;
+        padding: 1.1rem 1.8rem;
+      }
+    }
+  }
+  div.col-two {
+    p.about-us {
+      display: none;
+    }
+  }
+  div.col-three {
+    position: inherit;
+    font-size: 1.4rem;
+    top: 9rem;
+    left: 20rem;
+    padding-right: 0rem;
+    display: flex;
+    justify-content: right;
+  }
+  div.col-four {
+    button.footer-login {
+      position: absolute;
+      top: 3rem;
+      left: 2rem;
+      padding: 0.5rem 2rem;
+      font-size: 1.6rem;
+      width: 12rem;
+      height: 3.9rem;
+    }
+    button.footer-join {
+      position: absolute;
+      margin-top: 0rem;
+      top: 3rem;
+      right: 2rem;
+      font-size: 1.6rem;
+      padding: 0.5rem 2rem;
       width: 12rem;
       height: 3.9rem;
     }
