--- a/src/styles/_why.scss
+++ b/src/styles/_why.scss
@@ -24,6 +24,19 @@
   }
 }
 
+.learn-how-why {
+  padding: 0.5rem 3.5rem;
+  margin-top: -2rem;
+  background: #ff7c5c;
+  border: 0rem solid white;
+  color: white;
+  font-size: 2rem;
+  font-weight: 400;
+  border-radius: 4.3rem;
+  font-family: "Cabin", sans-serif;
+  z-index: 1;
+}
+
 /* -------------------------------------------  */
 
 .compare {
