minor changes on why page

--- a/src/styles/_why.scss
+++ b/src/styles/_why.scss
@@ -139,52 +139,52 @@
       font-size: 2rem;
     }
   }
+}
 
-  .green-bar {
-    position: relative;
+  // Accordion Stuff 
+  .accordion-why {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .accordion-body-why {
+    font-family: "Raleway", sans-serif;
+    font-size: 2.3rem;
+    font-weight: 300;
+    border: none;
+    width: 45rem;
     background-color: #024a63;
     color: white;
-    width: 38rem;
-    height: 4rem;
-    margin-bottom: 1rem;
+    border-radius: 0rem 0rem 4.3rem 4.3rem;
+    margin-top: -2.3rem;
     text-align: center;
-    border-radius: 3rem;
-
-    h5 {
-      text-align: center;
-      font-size: 1.8rem;
-      padding-top: 1rem;
-      padding-bottom: 2rem;
-    }
-
-    .plusBoy {
-      position: absolute;
-      top: 0rem;
-      right: 0;
-      transform: translate(-90%, 20%);
-      cursor: pointer;
-
-      i {
-        font-size: large;
-      }
-    }
+    margin-bottom: 2rem;
+    padding-top: 2rem;
+  }
+  
+  .button-accordion-why {
+    font-family: "Cabin", sans-serif;
+    position: relative;
+    font-size: 2.3rem;
+    font-weight: 300;
+    border: none;
+    background-color: #024a63;
+    border-radius: 4.3rem;
+    color: white;
+    width: 45rem;
+    height: 5.5rem;
+    
+    text-align: center;
+  }
+  
+  .plus-icon-why {
+    position: absolute;
+    font-size: 2.4rem;
+    right: 3rem;
+    font-size: 2.5rem;
   }
 
-  // .green-bar-two {
-  //   background-color: #024a63;
-  //   color: white;
-  //   width: 30rem;
-  //   height: 2.5rem;
-  //   margin-bottom: 1rem;
-  //   text-align: center;
-  //   border-radius: 1rem;
-
-  //   h5 {
-  //     padding-top: 0.5rem;
-  //     padding-bottom: 0.5rem;
-  //   }
-  // }
-}
+  // End off accordian stuff 
 
 .hrLine {
   margin-left: 50rem;
@@ -334,10 +334,121 @@
   }
 }
 
+//iphone 
 @media screen and (max-width: 375px) {
   .explanation-content {
     h2 {
       font-size: 1.5rem;
     }
+  }
+
+  .card-itself {
+    border: solid;
+    background: url("../imgs/bridge-water.png");
+    color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    // width: 55rem;
+    // height: 45rem;
+    margin: 0rem 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    border-radius: 3rem;
+    margin-bottom: 1rem;
+    width: 50%;
+
+    h5 {
+      font-size: 3rem;
+    }
+
+    h6 {
+      font-size: 2rem;
+      margin-bottom: 3rem;
+      margin-left: 3%;
+      margin-right: 3%;
+    }
+  }
+  
+
+  .card-itself-two {
+    border: solid;
+    color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background: url("../imgs/camel.png");
+    // width: 55rem; 
+    // height: 45rem;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    border-radius: 3rem;
+    margin: 0rem 3rem;
+    margin-bottom: 1rem;
+    width: 50%;
+
+    .card-itself-two-content {
+      margin: 29rem 0rem;
+    }
+
+    h5 {
+      font-size: 3rem;
+      margin-top: -18rem;
+    }
+
+    h6 {
+      font-size: 2rem;
+      margin-left: 3%;
+      margin-right: 3%;
+    }
+  }
+
+  .non-indust-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    // margin-left: 10%;
+    // margin-right: 10%;
+    
+    
+  }
+  .indust-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    // margin-left: 10%;
+    // margin-right: 10%;
+  }
+  .indust-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    // width: 50%;
+  }
+
+  .accordion-why {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .accordion-body-why {
+    font-size: 2rem;
+    width: 35rem;
+  }
+  
+  .button-accordion-why {
+    font-size: 1.9rem;
+    width: 35rem; 
+  }
+  
+  .plus-icon-why {
+    right: 1.2rem;
+    font-size: 2.5rem;
+    margin-top: -0.3rem;
   }
 }
