--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -140,7 +140,7 @@ a {
   border: 0rem solid white;
   color: white;
   font-size: 2rem;
-  font-weight: 400;
+  font-weight: 600;
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
   z-index: 1;
@@ -955,35 +955,45 @@ a {
   font-size: 2rem;
 }
 
-.compare .green-bar {
-  position: relative;
+.accordion-why {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+.accordion-body-why {
+  font-family: "Raleway", sans-serif;
+  font-size: 2.3rem;
+  font-weight: 300;
+  border: none;
+  width: 45rem;
   background-color: #024a63;
   color: white;
-  width: 38rem;
-  height: 4rem;
-  margin-bottom: 1rem;
+  border-radius: 0rem 0rem 4.3rem 4.3rem;
+  margin-top: -2.3rem;
   text-align: center;
-  border-radius: 3rem;
+  margin-bottom: 2rem;
+  padding-top: 2rem;
 }
 
-.compare .green-bar h5 {
+.button-accordion-why {
+  font-family: "Cabin", sans-serif;
+  position: relative;
+  font-size: 2.3rem;
+  font-weight: 300;
+  border: none;
+  background-color: #024a63;
+  border-radius: 4.3rem;
+  color: white;
+  width: 45rem;
+  height: 5.5rem;
   text-align: center;
-  font-size: 1.8rem;
-  padding-top: 1rem;
-  padding-bottom: 2rem;
 }
 
-.compare .green-bar .plusBoy {
+.plus-icon-why {
   position: absolute;
-  top: 0rem;
-  right: 0;
-  -webkit-transform: translate(-90%, 20%);
-          transform: translate(-90%, 20%);
-  cursor: pointer;
-}
-
-.compare .green-bar .plusBoy i {
-  font-size: large;
+  font-size: 2.4rem;
+  right: 3rem;
+  font-size: 2.5rem;
 }
 
 .hrLine {
@@ -1120,6 +1130,131 @@ a {
 @media screen and (max-width: 375px) {
   .explanation-content h2 {
     font-size: 1.5rem;
+  }
+  .card-itself {
+    border: solid;
+    background: url("../imgs/bridge-water.png");
+    color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 0rem 3rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 3rem;
+    margin-bottom: 1rem;
+    width: 50%;
+  }
+  .card-itself h5 {
+    font-size: 3rem;
+  }
+  .card-itself h6 {
+    font-size: 2rem;
+    margin-bottom: 3rem;
+    margin-left: 3%;
+    margin-right: 3%;
+  }
+  .card-itself-two {
+    border: solid;
+    color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background: url("../imgs/camel.png");
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 3rem;
+    margin: 0rem 3rem;
+    margin-bottom: 1rem;
+    width: 50%;
+  }
+  .card-itself-two .card-itself-two-content {
+    margin: 29rem 0rem;
+  }
+  .card-itself-two h5 {
+    font-size: 3rem;
+    margin-top: -18rem;
+  }
+  .card-itself-two h6 {
+    font-size: 2rem;
+    margin-left: 3%;
+    margin-right: 3%;
+  }
+  .non-indust-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .indust-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .indust-cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .accordion-why {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  .accordion-body-why {
+    font-size: 2rem;
+    width: 35rem;
+  }
+  .button-accordion-why {
+    font-size: 1.9rem;
+    width: 35rem;
+  }
+  .plus-icon-why {
+    right: 1.2rem;
+    font-size: 2.5rem;
+    margin-top: -0.3rem;
   }
 }
 
