--- a/src/styles/_aboutUs.scss
+++ b/src/styles/_aboutUs.scss
@@ -265,6 +265,8 @@ p.header-text-about {
   font-style: normal;
   margin-top: -2.5rem;
   margin-bottom: 0.5rem !important;
+  margin-left: 12%;
+  margin-right: 12%;
 }
 //iPhone and mobile devices
 @media all and (min-width: 320px) and (max-width: 499px) {
