--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -155,6 +155,7 @@ nav ul li a {
 
 nav {
   background-color: #024a63;
+  // height: 10rem;
 }
 
 a {
@@ -200,7 +201,7 @@ a {
   }
 }
 
-@media screen and (min-width: 994px) and (mac-width: 1150px) {
+@media screen and (min-width: 994px) and (max-width: 1150px) {
   .nav-link {
     font-size: 1.5rem !important;
     margin-left: 1rem;
